--- a/jQuery/source/_includes/asides/coderwall.html
+++ b/jQuery/source/_includes/asides/coderwall.html
@@ -8,8 +8,8 @@
   <script type="text/javascript">
     var coderwall = (function(){
       function render(options, badges){
-        var fragment = '', 
-            t = $(options.target)[0],
+        var fragment = '',
+            t = $(options.target),
             height = 65,
             width = 65,
             index;
@@ -20,16 +20,15 @@
           fragment += '</a>';
         }
 
-        t.innerHTML = fragment;
+        t.html(fragment);
       }
       return {
         showBadges: function(options){
           $.ajax({
               url: 'http://coderwall.com/' + options.user + '.json?callback=?'
-            , type: 'jsonp'
+            , dataType: 'jsonp'
             , error: function (err) { $(options.target + ' li.loading').addClass('error').text("Error loading feed"); }
             , success: function(res) {
-                console.log(res.data.badges);
                 render(options, res.data.badges);
             }
           });
@@ -37,27 +36,13 @@
       };
     })();
 
-    $.domReady(function(){
-      if (!window.jXHR){
-        var jxhr = document.createElement('script');
-        jxhr.type = 'text/javascript';
-        jxhr.src = '{{ root_url}}/javascripts/libs/jXHR.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(jxhr, s);
-      }
-      if (!window.$){
-        var b = document.createElement('script');
-        b.type = 'text/javascript';
-        b.src = '{{ root_url}}/javascripts/ender.js';
-        var sc = document.getElementsByTagName('script')[0];
-        sc.parentNode.insertBefore(jxhr, s);
-      }
+    $(document).ready(function(){
       coderwall.showBadges({
         user: '{{site.coderwall_user}}',
         target: '#cw_badges'
       });
     });
-  </script> 
+  </script>
   <style type="text/css">
     .cw_badge img {
       padding: 5px;
