Add endorsement button

--- a/jQuery/source/_includes/asides/coderwall.html
+++ b/jQuery/source/_includes/asides/coderwall.html
@@ -53,5 +53,11 @@
       box-shadow: none !important;
     }
   </style>
+
+  <div>
+    <a href="http://coderwall.com/{{site.coderwall_user}}"><img
+       alt="Endorse {{site.coderwall_user}} on Coderwall"
+       src="http://api.coderwall.com/{{site.coderwall_user}}/endorsecount.png" /></a>
+  </div>
 </section>
 {% endif %}
