--- a/ender/.themes/classic/source/_includes/asides/coderwall.html
+++ b/ender/.themes/classic/source/_includes/asides/coderwall.html
@@ -26,7 +26,8 @@
         showBadges: function(options){
           $.ajax({
               url: 'http://coderwall.com/' + options.user + '.json?callback=?'
-            , type: 'jsonp'
+            , dataType: 'jsonp'
+            , type: 'GET'
             , error: function (err) { $(options.target + ' li.loading').addClass('error').text("Error loading feed"); }
             , success: function(res) {
                 render(options, res.data.badges);
@@ -36,7 +37,7 @@
       };
     })();
 
-    $.domReady(function(){
+    $(document).ready(function(){
       if (!window.jXHR){
         var jxhr = document.createElement('script');
         jxhr.type = 'text/javascript';
