--- a/jQuery/source/_includes/asides/coderwall.html
+++ b/jQuery/source/_includes/asides/coderwall.html
@@ -1,9 +1,16 @@
 {% if site.coderwall_user %}
 <section>
   <h1>Coderwall</h1>
-  <ul id="cw_badges">
+  <ul id="cw-badges">
     <li class="loading">Status updating...</li>
   </ul>
+  {% if site.coderwall_endorse %}
+  <div>
+    <a href="http://coderwall.com/{{site.coderwall_user}}" target="_blank"><img
+       alt="Endorse {{site.coderwall_user}} on Coderwall"
+       src="http://api.coderwall.com/{{site.coderwall_user}}/endorsecount.png" /></a>
+  </div>
+  {% endif %}
 
   <script type="text/javascript">
     var coderwall = (function(){
@@ -15,7 +22,7 @@
             index;
 
         for (index in badges) {
-          fragment += '<a class="cw_badge"title="' + badges[index].description + '" href="http://coderwall.com/' + options.user + '">';
+          fragment += '<a class="cw-badge"title="' + badges[index].description + '" target="_blank" href="http://coderwall.com/' + options.user + '">';
           fragment +=   '<img alt="' + badges[index].description + '" height="' + width + '" width="' + height + '" src="' + badges[index].badge + '"/>';
           fragment += '</a>';
         }
@@ -43,23 +50,5 @@
       });
     });
   </script>
-  <style type="text/css">
-    .cw_badge img {
-      padding: 5px;
-      border: 0 none !important;
-      -moz-box-shadow: none !important;
-      -webkit-box-shadow: none !important;
-      -o-box-shadow: none !important;
-      box-shadow: none !important;
-    }
-  </style>
-
-  {% if site.coderwall_endorse %}
-  <div>
-    <a href="http://coderwall.com/{{site.coderwall_user}}"><img
-       alt="Endorse {{site.coderwall_user}} on Coderwall"
-       src="http://api.coderwall.com/{{site.coderwall_user}}/endorsecount.png" /></a>
-  </div>
-  {% endif %}
 </section>
 {% endif %}
